# asgi-cross-origin-protection

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/asgi_cross_origin_protection/: __init__.py  _types.py  isolation.py  origins.py  protection.py
tests/: test_isolation.py  test_origins.py  test_protection.py
