[project]
name = "asgi-cross-origin-protection"
version = "0.1.1"
description = "Drop-in, token-free CSRF protection for any ASGI app, using Fetch Metadata. No dependencies."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Thomas Desrosiers", email = "git@hive.pw" }
]
keywords = ["csrf", "cross-origin", "fetch-metadata", "asgi", "middleware", "security"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/thomasdesr/asgi-cross-origin-protection"
Repository = "https://github.com/thomasdesr/asgi-cross-origin-protection"
Changelog = "https://github.com/thomasdesr/asgi-cross-origin-protection/blob/main/CHANGELOG.md"
Issues = "https://github.com/thomasdesr/asgi-cross-origin-protection/issues"

[dependency-groups]
dev = [{ include-group = "lint" }, { include-group = "test" }]
lint = ["ruff", "ty"]
mutation = ["mutmut"]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "httpx",
    "hypothesis",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "INP001", "ANN", "PLR2004", "ARG"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["--cov=asgi_cross_origin_protection", "--cov-report=term-missing", "--cov-fail-under=100"]

[tool.mutmut]
# Run via `make mutants` (it disables the coverage gate, which mutants trip).
source_paths = ["src/asgi_cross_origin_protection/"]

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.11"
